--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   freezed: ^2.5.2
   freezed_annotation: ^2.4.1
   retrofit: ^4.1.0
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
