--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  # data model
   freezed: ^2.5.2
   freezed_annotation: ^2.4.1
   json_serializable: ^6.8.0
   json_annotation: ^4.9.0
+  # http client
   retrofit: ^4.1.0
   dio: ^5.4.3+1
+  # state management
+  flutter_riverpod: ^2.5.0
 
 dev_dependencies:
   flutter_test:
